phase2_Dev/src/objects/Historical_Intervention_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Rule__c</fullName>
        <formula>Intake_Id__c + &apos;|&apos; + Program_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Rule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Text__c</fullName>
        <label>Error Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intake_Id__c</fullName>
        <label>Intake Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervention_Code__c</fullName>
        <label>Intervention Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervention_Id__c</fullName>
        <label>Intervention Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervention_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intervention Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intervention_Type__c</fullName>
        <label>Intervention Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Id__c</fullName>
        <label>Program Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Historical Intervention Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Completed__c</columns>
        <columns>Intake_Id__c</columns>
        <columns>Program_Id__c</columns>
        <columns>Intervention_Code__c</columns>
        <columns>Intervention_Processed__c</columns>
        <columns>Error_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HIN-{0000000}</displayFormat>
        <label>Historical Intervention Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Intervention Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>